small content change

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 		    			<img src="img/Workshop-Biomimicry.png" alt="">
 		    			<div class="content">
 			    			<h3>BIOMIMICRY <span><p>&mdash; Biomimicry India Network Team, Bangalore</p></span></h3>
-			    			<p>Biomimicry’s demonstrated ability to provide sustainable solutions to many of today’s human problems will be explored during this workshop through case studies and hands-on exercises.</p>
+			    			<p>Biomimicry’s demonstrated ability to provide sustainable solutions to human problems will be explored through case studies and hands-on exercises.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day23 day">
