--- a/index.html
+++ b/index.html
@@ -110,20 +110,9 @@
 			
 			<div class="dfrost-logo"></div>
 			<div class="options">
-				<div class="register_btn"><a href="https://in.explara.com/widget-new/dfrost-2017" target="popupModal2">REGISTER NOW</a></div>
+				<div class="register_btn">
+				<a href="https://in.explara.com/widget-new/dfrost-2017" target="_blank">REGISTER NOW</a></div>		
 				
-				<div id="popupModal2" class="modal hide fade" tabindex="-1" role="dialog">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">×</button>
-							<h3>Title</h3>
-					</div>
-					<div class="modal-body">
-				      <iframe src="" style="zoom:0.60" width="99.6%" height="250" frameborder="0"></iframe>
-					</div>
-					<div class="modal-footer">
-						<button class="btn" data-dismiss="modal">OK</button>
-					</div>
-				</div>
 
 				<div>
 					<div id="date">18 &amp; 19 March | National Institute of Design, Bangalore</div>
