--- a/index.html
+++ b/index.html
@@ -339,15 +339,13 @@
 							<img src="img/Final_backgrounds/Vilas-Nayak.png" >
 			   				<h4>Vilas Nayak</h4>
 			   				<span class="des">Speed Artist</span>
-			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia. Vilas does live art shows regularly in the country and abroad.</p>
+			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia. Vilas does live art shows regularly in the country and abroad.&nbsp;<a href="http://vilasnayak.com/">Read more</a></p>
 			   			</div>
 			   			<div class="speaker">
 			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.png" >
 			   				<h4>Kaveri Gopalakrishnan</h4>
 			   				<span class="des">Art Director / Illustrator</span>
-			   				<p>
-			   				<span>A graduate in Animation Film Design from NID, Ahmedabad, she specialises in children’s educational content, preproduction design for animation, art direction for print and publication.</span>
-			   				<span></span></p>
+			   				<p>A graduate in Animation Film Design from NID, Ahmedabad, she specialises in children’s educational content, preproduction design for animation, art direction for print and publication.&nbsp;<a href="http://youngdesigners.nid.edu/archive/yd12/project.php?q=MjA2">Read more</a></p>
 			   			</div>
 			   		</div><!--
 					--><div class="col col2">
@@ -355,27 +353,27 @@
 			   				<img src="img/Final_backgrounds/Mark-Skaggs.png" >
 							<h4>Mark Skaggs</h4>
 							<span class="des">Game Designer</span>
-							<p>An industry expert who created games like FarmVille, CityVille, Empires and Allies, Red Alert 2, and more! Formerly at Zynga and currently with Moonfrog Labs, Bangalore as Director of Game Design.</p>
+							<p>An industry expert who created games like FarmVille, CityVille, Empires and Allies, Red Alert 2, and more! Formerly at Zynga and currently with Moonfrog Labs, Bangalore as Director of Game Design.&nbsp;<a href="https://www.linkedin.com/in/markskaggs/">Read more</a></p>
 						</div>
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Jay-Dutta.png" >
 							<h4>Jay Dutta</h4>
 							<span class="des">UI / UX Designer</span>
-							<p>A design thinker with multiple specialisations, who has built teams, products and brands. Former head of UX design at Flipkart and Adobe. Currently the venture advisor at SAIF partners, IxDA, DLabs at ISB.</p>
+							<p>A design thinker with multiple specialisations, who has built teams, products and brands. Former head of UX design at Flipkart and Adobe. Currently the venture advisor at SAIF partners, IxDA, DLabs at ISB.&nbsp;<a href="https://www.linkedin.com/in/jaydutta/">Read more</a></p>
 						</div>
 					</div><!--
 					--><div class="col col3">
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Sanya-Malik.png" >
-							<h4>Sania Malik</h4>
+							<h4>Sanya Malik</h4>
 							<span class="des">Branding / UX Designer</span>
-							<p>A NIFT, New Delhi alumni, Sanya Malik is currently working as a UX designer at the leading software company Directi, Bangalore. She also has the app Healthmonk to her name.</p>
+							<p>A NIFT, New Delhi alumni, Sanya Malik is currently working as a UX designer at the leading software company Directi, Bangalore. She also has the app Healthmonk to her name.&nbsp;<a href="https://www.linkedin.com/in/sanya-malik-16601025/">Read more</a></p>
 						</div>
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Saurabh-Shrivastava.png" >
 							<h4>Saurabh Srivastava</h4>
 							<span class="des">Research Scientist</span>
-							<p>In Conduent Labs, Saurabh has been managing research projects and building competencies in the areas of human computer interaction, social computing, machine learning, and context-aware computing.</p>
+							<p>In Conduent Labs, Saurabh has been managing research projects and building competencies in the areas of human computer interaction, social computing, machine learning, and context-aware computing.&nbsp;<a href="https://www.linkedin.com/in/markskaggs/">Read more</a></p>
 						</div>
 					</div>
 				</div>
