--- a/index.html
+++ b/index.html
@@ -226,25 +226,25 @@
 		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Culturals</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">16:30</span>
+			    				<span class="time">05:00 PM - 05:30 PM</span>
+			    				<span class="high evt">Kommu Koya Dance</span>
+			    				<span class="low">Telangana Tribal Dance Troupe</span>
+		    				</div>
+		    				<div class="event_ls">
+			    				<span class="time">07:45 PM - 08:00 PM</span>
 			    				<span class="high evt">Cultural Event - Dance</span>
 			    				<span class="low">NID students</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">18:30</span>
-			    				<span class="high evt">Sand Art</span>
-			    				<span class="low">Jahnavi Banaki, NID</span>
+			    				<span class="time">08:00 PM - 08:30 PM</span>
+			    				<span class="high evt">Standup Comedy</span>
+			    				<span class="low">Kjeld srsth &amp; team</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">20:30</span>
-			    				<span class="high evt">Vasu Dixit Collective</span>
-			    				<span class="low">Band ensemble</span>
-		    				</div>
-		    				<div class="event_ls">
-			    				<span class="time">21:30</span>
+			    				<span class="time">08:30 PM - 09:00 PM</span>
 			    				<span class="high evt">Cultural Event - Dance</span>
 			    				<span class="low">NID students</span>
-		    				</div>		    			
+		    				</div>	    			
 		    			</div>
 		    		</div><!--
 		    	--><div class="schdl_cutout2" >
@@ -295,24 +295,19 @@
 		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Culturals</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">16:30</span>
-			    				<span class="high evt">Cultural Event - Dance</span>
-			    				<span class="low">NID students</span>
-		    				</div>
-		    				<div class="event_ls">
-			    				<span class="time">18:30</span>
-			    				<span class="high evt">Sand Art</span>
-			    				<span class="low">Jahnavi Banaki, NID</span>
-		    				</div>
-		    				<div class="event_ls">
-			    				<span class="time">20:30</span>
+			    				<span class="time">05:00 PM - 05:45 PM</span>
 			    				<span class="high evt">Vasu Dixit Collective</span>
 			    				<span class="low">Band ensemble</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">21:30</span>
-			    				<span class="high evt">Cultural Event - Dance</span>
-			    				<span class="low">NID students</span>
+			    				<span class="time">08:00 PM - 08:15 PM</span>
+			    				<span class="high evt">Sand Art</span>
+			    				<span class="low">Jahnavi Banaki, NID</span>
+		    				</div>
+		    				<div class="event_ls">
+			    				<span class="time">08:15 PM - 09:00 PM</span>
+			    				<span class="high evt">Band Performance</span>
+			    				<span class="low">NID Students</span>
 		    				</div>
 			    			<div class="download-schdl">
 	 		    				<a href="#">Download the Schedule</a>
