logo made static on mobile and ipad
logo made static on mobile and ipad

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">08:00 PM - 08:30 PM</span>
 			    				<span class="high evt">Standup Comedy</span>
-			    				<span class="low">Kjeld srsth &amp; team</span>
+			    				<span class="low">Kjeld sresth &amp; team</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">08:30 PM - 09:00 PM</span>
