date added to schedule header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>NID Dfrost | March 18-19, 2017</title>
 	<meta name="description" content="NID , Bengaluru , Event , Design , Fest , Dfrost ,">  
 	<meta name="author" content="">
-	<link rel="icon" type="image/ico" href="../img/favicon_dfrost.png">
+	<link rel="icon" type="image/ico" href="img/favicon_dfrost.png">
 	<!-- Bootstrap and MDB import -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">  -->
@@ -175,7 +175,7 @@
 		    		<h2>EVENT SCHEDULE</h2>
 		    	</div>
 		    	<div class="day1">
-		    			<h3>DAY 1</h3>
+		    			<h3>DAY 1<span class="sep"> | </span><span class="right">March 18</span></h3>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
 		    					<span class="left">dLabs</span><span class="sep">|</span><span class="right">Workshops</span>
@@ -249,7 +249,7 @@
 		    		</div><!--
 		    	--><div class="schdl_cutout2" >
 		    		<div class="day2">
-		    			<h3>DAY 2</h3>
+		    			<h3>DAY 2<span class="sep"> | </span><span class="right">March 19</span></h3>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
 		    					<span class="left">dLabs</span><span class="sep">|</span><span class="right">Workshops</span>
