links added to contact section

--- a/index.html
+++ b/index.html
@@ -507,15 +507,16 @@
 		   	<section id="venue" class="venue">
 		   		<div class="venue_cnt">
 		   			<h2>VENUE</h2>
+		   			<a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank">
 		   			<p class="content">
 		   				<i class="fa fa-map-marker"></i>
 		   				<span>
 		   				National Institute of Design, R&amp;D Campus</span><br>
 		   				12, HMT Link Road (off Tumkur Road),<br>
 		   				Peenya, Bengaluru - 560022
-					</p>
-					<p><i class="fa fa-phone"></i>+91 96755343520</p>
-					<p><i class="fa fa-globe"></i>www.nid.edu</p>
+					</p></a>
+					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>+91 96755343520</p></a>
+					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>www.nid.edu</p></a>
 		   		</div>
 		   		<img class="map" src="img/Final_backgrounds/mapdf.png">
 		   		
@@ -581,11 +582,5 @@
 	  ga('send', 'pageview');
 	
 </script>
-<script type="text/javascript">
-	$('#myModal').on('shown.bs.modal', function () {
-  	$('#myInput').focus()})
-</script>
-
-
 </body>
 </html>
