--- a/index.html
+++ b/index.html
@@ -498,6 +498,10 @@
 		   			<div class="partner_pics">
 		   				<img src="img/sp-wacom.png">
 		   				<img src="img/sp-thyrocare.png">
+		   				<img src="img/sp-mapbox.png">
+		   				<img src="img/sp-the-hindu.jpg">
+		   				<img src="img/sp-Govt-Logo.png">
+		   				<!-- <img src="img/sp-thyrocare.png"> -->		   				
 		   			</div>
 		   		</div>
 		   	</section>
