added featured sections

--- a/index.html
+++ b/index.html
@@ -374,6 +374,28 @@
 				</div>
 		   	</section>
 		   <!--/Speakers-->
+
+		   <div class="featured">
+		   		<div class="featured-1 featured-sub main">
+		   			<img src="img/vasu-dixit.jpg" alt="">
+		   			<h3>Vasu Dixit Collective</h3>
+		   		</div>
+		   		<div class="featured-others">
+		   			<div class="featured-2 featured-sub">
+		   				<img src="img/kjeld.jpg" alt="">
+		   				<h3>Kjeld Shresth Stand Up</h3>
+		   			</div>
+		   			<div class="featured-3 featured-sub">
+		   				<img src="img/komma-koya.jpg" alt="">
+		   				<h3>Komma Koya Dance</h3>
+		   			</div>
+		   			<div class="featured-4 featured-sub">
+		   				<img src="img/sand-art.jpg" alt="">
+		   				<h3>Live Sand Art</h3>
+		   			</div>
+		   		</div>
+
+		   </div>
 		   
 		   <!--dLABS-->
 		    <section id="workshops" class="dlabs">
