--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
 		    				<div class="event_ls">
 			    				<span class="time">11:00 AM - 01:00 PM</span>
 			    				<span class="high lab">Biomimicry</span>
-			    				<span class="low">Biomimicry India Network Team, Bangalore</span>
+			    				<span class="low">Biomimicry India Network Team</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">02:00 PM - 04:00 PM</span>
 			    				<span class="high lab">Paper Engineering</span>
-			    				<span class="low">Arun Desai, Studio Chitte, Bangalore</span>
+			    				<span class="low">Arun Desai, Studio Chitte</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -302,7 +302,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">08:00 PM - 08:15 PM</span>
 			    				<span class="high evt">Sand Art</span>
-			    				<span class="low">Jahnavi Banaki, NID</span>
+			    				<span class="low">Jahnavi Bananki, NID</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">08:15 PM - 09:00 PM</span>
