Content corrections for spellings
Content corrections for spellings

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:20 PM - 06:40 PM</span>
-			    				<span class="high tlk">Sania Malik</span>
+			    				<span class="high tlk">Sanya Malik</span>
 			    				<span class="low">Branding</span>
 		    				</div>
 		    				<div class="event_ls">
@@ -239,7 +239,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">08:00 PM - 08:30 PM</span>
 			    				<span class="high evt">Standup Comedy</span>
-			    				<span class="low">Kjeld sresth &amp; team</span>
+			    				<span class="low">Kjeld Sreshth &amp; team</span>
 		    				</div>
 		    				<div class="event_ls">
 
@@ -278,7 +278,7 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:00 PM - 06:20 PM</span>
-			    				<span class="high tlk">Saurabh Shrivastava</span>
+			    				<span class="high tlk">Saurabh Srivastava</span>
 			    				<span class="low">Research Scientist, Conduent Labs</span>
 		    				</div>
 		    				<div class="event_ls">
@@ -540,6 +540,7 @@
 		   			<a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank">
 		   			<p class="content">
 		   				<i class="fa fa-map-marker"></i>
+		   				
 		   				<span>
 		   				National Institute of Design, R&amp;D Campus</span><br>
 		   				12, HMT Link Road (off Tumkur Road),<br>
