--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 		   				<img src="img/sp-wacom.png">
 		   				<img src="img/sp-thyrocare.png">
 		   				<img src="img/sp-mapbox.png">
-		   				<img src="img/sp-the-hindu.jpg">
+		   				<img src="img/sp-the-hindu.png">
 		   				<img src="img/sp-Govt-Logo.png">
 		   				<!-- <img src="img/sp-thyrocare.png"> -->		   				
 		   			</div>
