--- a/index.html
+++ b/index.html
@@ -535,22 +535,26 @@
 
 		   	<!--Venue-->
 		   	<section id="venue" class="venue">
+		   	<div>
 		   		<div class="venue_cnt">
 		   			<h2>VENUE</h2>
-		   			<a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank">
+		   			<!-- <a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank"> -->
 		   			<p class="content">
 		   				<i class="fa fa-map-marker"></i>
 		   				
 		   				<span>
-		   				National Institute of Design, R&amp;D Campus</span><br>
-		   				12, HMT Link Road (off Tumkur Road),<br>
+		   				&nbsp;National Institute of Design, R&amp;D Campus</span><br>
+		   				12, HMT Link Road (off Tumkur Road),<br>Opposite Platinum City<br>
 		   				Peenya, Bengaluru - 560022
-					</p></a>
-					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>+91 96755343520</p></a>
-					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>www.nid.edu</p></a>
+					</p><!-- </a> -->
+					<button class="btn btn-default maps">View on Google Maps</button><br><br>
+					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;+91 96755343520</p></a>
+					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>&nbsp;www.nid.edu</p></a>
 		   		</div>
+		   		<div>
 		   		<img class="map" src="img/Final_backgrounds/mapdf.png">
-		   		
+		   		</div>
+		   	</div>	
 		   	</section>
 		   	<!--/Venue-->
 
