download schedule added

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 			    				<span class="low">NID Students</span>
 		    				</div>
 			    			<div class="download-schdl">
-	 		    				<a href="#">Download the Schedule</a>
+	 		    				<a href="img/Dfrost2017Schedule.pdf" target="_blank">Download the Schedule</a>
 	 		    			</div>
 		    			</div>
 		    		</div>
