--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
 		   			<p>Contests are open till <span class="color">March 18, 11:00pm.</span> All the best!</p>
 		   		</div>
 		   		<div class="com_img">
-		   			<a href="#"><img src="img/Final_backgrounds/images/Digital-Painting.png" class="painting" alt=""></a>
-		   			<a href="#"><img src="img/Final_backgrounds/images/Photography.png" class="photography" alt=""></a>
+		   			<a href="BreaktheDimension-DigitalPainting.pdf" target="_blank"><img src="img/Final_backgrounds/images/Digital-Painting.png" class="painting" alt=""></a>
+		   			<a href="WindowtotheOtherside-Photography.pdf" target="_blank"><img src="img/Final_backgrounds/images/Photography.png" class="photography" alt=""></a>
 		   		</div>
 		   	</section>
 		   	
@@ -522,11 +522,11 @@
 		   		<div class="partner_cnt">
 		   			<h2>PARTNERS</h2>
 		   			<div class="partner_pics">
-		   				<img src="img/sp-wacom.png">
-		   				<img src="img/sp-thyrocare.png">
-		   				<img src="img/sp-mapbox.png">
-		   				<img src="img/sp-the-hindu.png">
-		   				<img src="img/sp-Govt-Logo.png">
+		   				<a href="http://www.wacom.com/en-in" target="_blank"><img src="img/sp-wacom.png"></a>
+		   				<a href="http://www.thyrocare.com" target="_blank"><img src="img/sp-thyrocare.png"></a>
+		   				<a href="https://www.mapbox.com" target="_blank"><img src="img/sp-mapbox.png"></a>
+		   				<a href="http://www.thehindu.com" target="_blank"><img src="img/sp-the-hindu.png"></a>
+		   				<a href="http://www.telangana.gov.in/about/language-culture" target="_blank"><img src="img/sp-Govt-Logo.png"></a>
 		   				<!-- <img src="img/sp-thyrocare.png"> -->		   				
 		   			</div>
 		   		</div>
