content changes from Jayant
content changes by content team - Jayant

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">11:00 AM - 01:00 PM</span>
 			    				<span class="high lab">Lost in Colour</span>
-			    				<span class="low">Gregor Strutz, INKL GmbH, Berlin</span>
+			    				<span class="low">Gregor Strutz, inkl. Design GmbH, Berlin</span>
 		    				</div>
 		    				<div class="event_ls">			    				
 			    				<span class="time">02:00 PM - 04:00 PM</span>
@@ -208,17 +208,17 @@
 		    				<div class="event_ls">
 			    				<span class="time">06:00 PM - 06:20 PM</span>
 			    				<span class="high tlk">Mark Skaggs</span>
-			    				<span class="low">Co-creator, Farmville</span>
+			    				<span class="low">Game Designer</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:20 PM - 06:40 PM</span>
 			    				<span class="high tlk">Sanya Malik</span>
-			    				<span class="low">Branding</span>
+			    				<span class="low">UX Designer, Directi</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:40 PM - 07:00 PM</span>
 			    				<span class="high tlk">Vilas Nayak</span>
-			    				<span class="low">Speed Art</span>
+			    				<span class="low">Speed Painter</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -239,7 +239,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">08:00 PM - 08:30 PM</span>
 			    				<span class="high evt">Standup Comedy</span>
-			    				<span class="low">Kjeld Sreshth &amp; team</span>
+			    				<span class="low">Aamer, Kjeld, Shunky</span>
 		    				</div>
 		    				<div class="event_ls">
 
@@ -283,13 +283,13 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:20 PM - 06:40 PM</span>
-			    				<span class="high tlk">Kaveri G</span>
+			    				<span class="high tlk">Kaveri Gopalakrishnan</span>
 			    				<span class="low">Art Director/Illustrator</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:40 PM - 07:00 PM</span>
 			    				<span class="high tlk">Jay Dutta</span>
-			    				<span class="low">UI/UX Designer</span>
+			    				<span class="low">UX Designer</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -298,8 +298,8 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">05:00 PM - 05:45 PM</span>
-			    				<span class="high evt">Vasu Dixit Collective</span>
-			    				<span class="low">Band ensemble</span>
+			    				<span class="high evt">Vasu Dixit</span>
+			    				<span class="low">Vocalist at Swarathma</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">08:00 PM - 08:15 PM</span>
@@ -337,14 +337,14 @@
 			   			<div class="speaker">
 							<img src="img/Final_backgrounds/Vilas-Nayak.png" >
 			   				<h4>Vilas Nayak</h4>
-			   				<span class="des">Speed Artist</span>
+			   				<span class="des">Speed Painter</span>
 			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia. Vilas does live art shows regularly in the country and abroad.&nbsp;<a href="http://vilasnayak.com/">Read more</a></p>
 			   			</div>
 			   			<div class="speaker">
 			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.png" >
 			   				<h4>Kaveri Gopalakrishnan</h4>
 			   				<span class="des">Art Director / Illustrator</span>
-			   				<p>A graduate in Animation Film Design from NID, Ahmedabad, she specialises in children’s educational content, preproduction design for animation, art direction for print and publication.&nbsp;<a href="http://youngdesigners.nid.edu/archive/yd12/project.php?q=MjA2">Read more</a></p>
+			   				<p>A graduate in Animation Film Design from NID, Ahmedabad. She specialises in children’s educational content, preproduction design for animation, art direction for print and publication.&nbsp;<a href="http://youngdesigners.nid.edu/archive/yd12/project.php?q=MjA2">Read more</a></p>
 			   			</div>
 			   		</div><!--
 					--><div class="col col2">
@@ -357,16 +357,16 @@
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Jay-Dutta.png" >
 							<h4>Jay Dutta</h4>
-							<span class="des">UI / UX Designer</span>
-							<p>A design thinker with multiple specialisations, who has built teams, products and brands. Former head of UX design at Flipkart and Adobe. Currently the venture advisor at SAIF partners, IxDA, DLabs at ISB.&nbsp;<a href="https://www.linkedin.com/in/jaydutta/">Read more</a></p>
+							<span class="des">UX Designer</span>
+							<p>A design thinker with multiple specialisations, who has built teams, products and brands. Former head of UX design at Flipkart and Adobe. Currently the venture advisor at SAIF Partners, IxDA, DLabs at ISB.&nbsp;<a href="https://www.linkedin.com/in/jaydutta/">Read more</a></p>
 						</div>
 					</div><!--
 					--><div class="col col3">
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Sanya-Malik.png" >
 							<h4>Sanya Malik</h4>
-							<span class="des">Branding / UX Designer</span>
-							<p>A NIFT, New Delhi alumni, Sanya Malik is currently working as a UX designer at the leading software company Directi, Bangalore. She also has the app Healthmonk to her name.&nbsp;<a href="https://www.linkedin.com/in/sanya-malik-16601025/">Read more</a></p>
+							<span class="des">UX Designer</span>
+							<p>A NIFT, New Delhi alumnus, Sanya Malik is currently working as a UX designer at the leading software company Directi, Bangalore. She also has the app Healthmonk to her name.&nbsp;<a href="https://www.linkedin.com/in/sanya-malik-16601025/">Read more</a></p>
 						</div>
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Saurabh-Shrivastava.png" >
@@ -382,16 +382,16 @@
 		   <div class="featured">
 		   		<div class="featured-1 featured-sub main">
 		   			<img src="img/vasu-dixit.jpg" alt="">
-		   			<h3>Vasu Dixit Collective</h3>
+		   			<h3>Vasu Dixit</h3>
 		   		</div>
 		   		<div class="featured-others">
 		   			<div class="featured-2 featured-sub">
 		   				<img src="img/kjeld.jpg" alt="">
-		   				<h3>Kjeld Shresth Stand Up</h3>
+		   				<h3>Aamer, Kjeld &amp; Shunky</h3>
 		   			</div>
 		   			<div class="featured-3 featured-sub">
 		   				<img src="img/komma-koya.jpg" alt="">
-		   				<h3>Komma Koya Dance</h3>
+		   				<h3>Kommu Koya Dance</h3>
 		   			</div>
 		   			<div class="featured-4 featured-sub">
 		   				<img src="img/sand-art.jpg" alt="">
@@ -413,7 +413,7 @@
 		    			<img src="img/Workshop-Bamboo.png" alt="">
 		    			<div class="content">
 			    			<h3>MAKE WITH BAMBOO <span><p>&mdash; NID Centre for Bamboo Initiatives</p></span></h3>
-			    			<p>Bamboo as a material is being creatively used in various areas. The workshop will give you a quick understanding on its usage, through making a simple product.</p>
+			    			<p>Bamboo as a material is being creatively used in various areas. This workshop will give you a quick understanding on its usage, by making a simple product.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day12 day">
@@ -459,7 +459,7 @@
 		   		<div class="com_content">
 		   			<h2>ONLINE COMPETITIONS</h2>
 		   			<P>Get a chance to showcase your work at a prominent platform.
-		   			Dfrost is hosting online contest for digital painting and photography.</P>
+		   			Dfrost is hosting online contests for digital painting and photography.</P>
 		   			<p><span class="color">The winning entries will be on display at Dfrost, and the winners will bag goodies worth Rs 10,000.</span></p>
 		   			<p>Contests are open till <span class="color">March 18, 11:00pm.</span> All the best!</p>
 		   		</div>
@@ -501,7 +501,7 @@
 		    			<img src="img/dstall.png">
 		    			<div class="content">
 		    				<h3>dSTALL</h3>
-		    				<p>Skipped lunch because you were too engrossed in design mania? Worry not, dStall has you covered. You might want to hurry though, food rarely lasts at NID.</p>
+		    				<p>Skipped lunch because you were too engrossed in design mania? Worry not, dStall has you covered. You might want to hurry though; food rarely lasts at NID.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
@@ -548,7 +548,7 @@
 		   				Peenya, Bengaluru - 560022
 					</p><!-- </a> -->
 					<button class="btn btn-default maps">View on Google Maps</button><br><br>
-					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;+91 96755343520</p></a>
+					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;080-297-25006/23276 </p></a>
 					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>&nbsp;www.nid.edu</p></a>
 		   		</div>
 		   		<div>
