shitty content changes like ; and ,
Jayant responsible for shitty changes

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 							<img src="img/Final_backgrounds/Vilas-Nayak.png" >
 			   				<h4>Vilas Nayak</h4>
 			   				<span class="des">Speed Painter</span>
-			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia. Vilas does live art shows regularly in the country and abroad.&nbsp;<a href="http://vilasnayak.com/">Read more</a></p>
+			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia, Vilas does live art shows regularly in the country and abroad.&nbsp;<a href="http://vilasnayak.com/">Read more</a></p>
 			   			</div>
 			   			<div class="speaker">
 			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.png" >
@@ -501,7 +501,7 @@
 		    			<img src="img/dstall.png">
 		    			<div class="content">
 		    				<h3>dSTALL</h3>
-		    				<p>Skipped lunch because you were too engrossed in design mania? Worry not, dStall has you covered. You might want to hurry though; food rarely lasts at NID.</p>
+		    				<p>Skipped lunch because you were too engrossed in design mania? Worry not, dStall has you covered. You might want to hurry though food rarely lasts at NID.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
