--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
 		   			<p>Contests are open till <span class="color">March 18, 11:00pm.</span> All the best!</p>
 		   		</div>
 		   		<div class="com_img">
-		   			<a href="BreaktheDimension-DigitalPainting.pdf" target="_blank"><img src="img/Final_backgrounds/images/Digital-Painting.png" class="painting" alt=""></a>
-		   			<a href="WindowtotheOtherside-Photography.pdf" target="_blank"><img src="img/Final_backgrounds/images/Photography.png" class="photography" alt=""></a>
+		   			<a href="img/BreaktheDimension-DigitalPainting.pdf" target="_blank"><img src="img/Final_backgrounds/images/Digital-Painting.png" class="painting" alt=""></a>
+		   			<a href="img/WindowtotheOtherside-Photography.pdf" target="_blank"><img src="img/Final_backgrounds/images/Photography.png" class="photography" alt=""></a>
 		   		</div>
 		   	</section>
 		   	
@@ -547,8 +547,9 @@
 		   				12, HMT Link Road (off Tumkur Road),<br>Opposite Platinum City<br>
 		   				Peenya, Bengaluru - 560022
 					</p><!-- </a> -->
-					<button class="btn btn-default maps">View on Google Maps</button><br><br>
-					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;080-297-25006/23276 </p></a>
+					<a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank"><button class="btn btn-default maps">View on Google Maps</button></a><br><br>
+					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;080-297-25006</p></a>
+					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;080-297-23276</p></a>
 					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>&nbsp;www.nid.edu</p></a>
 		   		</div>
 		   		<div>
