--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	<link rel="stylesheet" href="css/style.css">
 	
 	<!--Carousal css and js links Please don't replace its position-->
-	<link rel="stylesheet" href="css/jquery.flipster.min.css">
+	<!-- <link rel="stylesheet" href="css/jquery.flipster.min.css"> -->
 	<script src="js/jquery.min.js"></script>
-    <script src="js/jquery.flipster.min.js"></script>
-    
+    <!-- <script src="js/jquery.flipster.min.js"></script>
+     -->
 	
 	<!-- HTML5 shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
