Sponsor bg color white

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>&nbsp;www.nid.edu</p></a>
 		   		</div>
 		   		<div>
-		   		<img class="map" src="img/Final_backgrounds/mapdf.png">
+		   		<img id="nid-map" class="map" src="img/Final_backgrounds/mapdf.png">
 		   		</div>
 		   	</div>	
 		   	</section>
